--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,9 @@ psycopg2-binary = "==2.8.4"
 soupsieve = "==1.9.5"
 wagtail = "==2.9.3"
 xmltodict = "==0.12.0"
+django-storages = {version = "==1.7.1", extras = ["google"]}
+uwsgi = "==2.0.20"
+dj-database-url = "<0.6"
 
 [requires]
-python_version = "3.5"
+python_version = "3.6"
