--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ xmltodict = "==0.12.0"
 django-storages = {version = "==1.7.1", extras = ["google"]}
 uwsgi = "==2.0.20"
 dj-database-url = "<0.6"
+whitenoise = {version = "==5.2.0", extras = ["brotli"]}
 
 [requires]
 python_version = "3.6"
