comment out nonfunctional check-static directive in uwsgi.ini

--- a/kubernetes/uwsgi.ini
+++ b/kubernetes/uwsgi.ini
@@ -18,5 +18,6 @@ http-socket = :8000
 
 # Application configuration.
 chdir = /app
-check-static = /app/public
+# serving files like this does not work (throws 500 errors)
+# check-static = /app/libraries/static
 module = libraries.wsgi:application
