--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -10,7 +10,10 @@ files:
 rules:
     class-name-format: 0
     colorKeyword: 0
+    force-attribute-nesting: 0
+    force-element-nesting: 0
     force-pseudo-nesting: 0
+    hex-notation: 0
     indentation:
         - 1
         -
