--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -280,3 +280,131 @@ spec:
   backend:
     serviceName: libraries-http
     servicePort: 8000
+
+---
+#
+# CRONJOBS
+#
+
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: summon-sftp
+  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
+spec:
+  # run daily
+  schedule: "2 0 * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: Never
+          containers:
+            - name: test-cronjob
+              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              imagePullPolicy: Always
+              args:
+                - python
+                - libraries/manage.py
+                - summon_deletes
+              # Env variables form ConfigMap
+              envFrom:
+                - configMapRef:
+                    name: app
+              env:
+                - name: SECRET_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: secret-key
+                      key: key
+                - name: DB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: username
+                - name: DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: password
+                - name: DATABASE_URL
+                  value: postgres://$(DB_USER):$(DB_PASSWORD)@cloudsqlproxy:5432/$(DB_NAME)
+                - name: GS_CREDENTIALS
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloud-storage-credentials
+                      key: credentials
+                # Summon SFTP secrets
+                - name: SUMMON_SFTP_UN
+                  valueFrom:
+                    secretKeyRef:
+                      name: summon-sftp
+                      key: summon-user
+                - name: SUMMON_SFTP_PW
+                  valueFrom:
+                    secretKeyRef:
+                      name: summon-sftp
+                      key: summon-sftp
+
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: instagram
+  namespace: ${KUBERNETES_NAMESPACE_OVERWRITE}
+spec:
+  # run daily
+  schedule: "0 0 * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: Never
+          containers:
+            - name: test-cronjob
+              image: us.gcr.io/cca-web-staging/libraries:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}
+              imagePullPolicy: Always
+              args:
+                - python
+                - libraries/manage.py
+                - instagram
+              # Env variables form ConfigMap
+              envFrom:
+                - configMapRef:
+                    name: app
+              env:
+                - name: SECRET_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: secret-key
+                      key: key
+                - name: DB_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: username
+                - name: DB_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloudsql-db-credentials
+                      key: password
+                - name: DATABASE_URL
+                  value: postgres://$(DB_USER):$(DB_PASSWORD)@cloudsqlproxy:5432/$(DB_NAME)
+                - name: GS_CREDENTIALS
+                  valueFrom:
+                    secretKeyRef:
+                      name: cloud-storage-credentials
+                      key: credentials
+                # Instagram app secrets
+                - name: INSTAGRAM_SECRET
+                  valueFrom:
+                    secretKeyRef:
+                      name: instagram-secret
+                      key: instagram-secret
+                - name: INSTAGRAM_APP_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: instagram-secret
+                      key: app-id
+
+---
