local k8s - initial setup for a postgres/ES/python cluster
the main app node is just a python image with no app, not wagtail yet
need to work on getting wagtail init'd and running, also scripts to
sync static files and the production database

--- a/kubernetes/production.yaml
+++ b/kubernetes/production.yaml
@@ -226,13 +226,12 @@ spec:
               readOnly: true
             - name: cloudsql
               mountPath: /cloudsql
-
       volumes:
         - name: cloudsql-instance-credentials
           secret:
             secretName: cloudsql-instance-credentials
         - name: cloudsql
-          emptyDir:
+          emptyDir: {}
 
 ---
 # A service to allow external connections.  This accepts connections from inside
