--- a/kubernetes/local/kustomization.yml
+++ b/kubernetes/local/kustomization.yml
@@ -11,3 +11,8 @@ resources:
   - namespace.yml
   - deployment.yml
   - service.yml
+  - configMap.yml
+
+secretGenerator:
+  - name: app-secrets
+    env: secrets.env
