--- a/kubernetes/local/postgres/configMap.yaml
+++ b/kubernetes/local/postgres/configMap.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: postgres
 data:
-  POSTGRES_DB: cca_portal
+  POSTGRES_DB: libraries_wagtail
   POSTGRES_USER: postgresadmin
   POSTGRES_PASSWORD: admin123
 
